--- a/estilos/logincss.css
+++ b/estilos/logincss.css
@@ -18,6 +18,7 @@
 
 body, html {
     background-color: var(--cor0);
+    background: url(../imagens/login-background\ 1.0.1.png); /*colocar a wave no background*/
     background-repeat: no-repeat;
     width: 100vw;
     height: 100vh;
@@ -38,8 +39,8 @@ section#login {
     left: 50%;
 
     background-color: white;
-    width: 250px;
-    height: 500px;
+    width: 300px;
+    height: 550px;
     border-radius: 25px;
 
     
@@ -56,7 +57,7 @@ section#login {
 
 
 section#login > div#imagem {
-    background: var(--cor1) url(../imagens/limpeza\ 1.0.1.jpg);
+    background: var(--cor1) url(../imagens/limpeza\ 1.0.2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 250px;
@@ -103,6 +104,30 @@ span.material-symbols-outlined {
     
 }
 
+
+div > a {
+    text-align: center;
+    display: block;
+    width: 140px;
+    height: 20px;
+    font-size: 1em;
+    background-color: var(--cor3);
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin: auto;
+    padding-bottom: 25px;
+}
+
+div > a:hover {
+    text-decoration: underline;
+    background-color: var(--cor5);
+    color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.281);
+
+
+}
+
 div.campo > input {
     height: 100%;
     width: calc(100% - 35px);  /*consigo calcular 100% que era o que eu queria, mas como tem algo antes ( neste caso a img ), é 100% do restante */
@@ -114,6 +139,10 @@ div.campo > input {
 div.campo >input:focus-within {         /*:focus-within é para ter uma ação quando estou a escrever*/
     background-color: var(--cor1);
 }
+
+
+
+
 
 
 form > input[type=submit]{                              /*novo tipo de identificação em css*/
